opam-version: "1.2"
maintainer: "Marek Kubica <marek@xivilization.net>"
author: "Marek Kubica <marek@xivilization.net>"
homepage: "https://github.com/Leonidas-from-XIV/slacko"
license: "LGPL-3 with OCaml linking exception"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [make "test"]
depends: [
  "jbuilder" {build}
  "cmdliner"
  "yojson"
  "lwt" {>= "3.2.0"}
  "lwt_ppx"
  "tls" | "ssl"
  "cohttp-lwt-unix"
  "ppx_deriving_yojson" {>= "3.0"}
  "ounit" {test}
]
conflicts: [
  # broken release: https://github.com/mirage/ocaml-conduit/issues/189
  "conduit" {= "0.14.1"}
]
dev-repo: "git://github.com/Leonidas-from-XIV/slacko"
bug-reports: "https://github.com/Leonidas-from-XIV/slacko/issues"
available: [ ocaml-version >= "4.04.0" ]
