opam-version: "2.0"
maintainer: "Marek Kubica <marek@xivilization.net>"
author: "Marek Kubica <marek@xivilization.net>"
homepage: "https://github.com/Leonidas-from-XIV/slacko"
license: "LGPL-3 with OCaml linking exception"
doc: "https://leonidas-from-xiv.github.io/slacko/"
build: [["dune" "build" "-p" name "-j" jobs]]
run-test: [make "test"]
depends: [
  "dune" {build & >= "1.2.0"}
  "cmdliner"
  "yojson" {>= "1.6.0"}
  "lwt" {>= "3.2.0"}
  "lwt_ppx"
  "tls" | "ssl"
  "cohttp-lwt-unix" {>= "1.0.0"}
  "ppx_deriving_yojson" {>= "3.3"}
  "ptime"
  "result"
  "ounit" {with-test}
  "ppx_deriving" {with-test & >= "5.2.1"}
]
conflicts: [
  # broken release: https://github.com/mirage/ocaml-conduit/issues/189
  "conduit" {= "0.14.1"}
]
dev-repo: "git+https://github.com/Leonidas-from-XIV/slacko.git"
bug-reports: "https://github.com/Leonidas-from-XIV/slacko/issues"
synopsis:
  "Type-safe binding to the Slack API"
description: """
Type-safe binding to the Slack API


Slacko provides an easy to use interface to the Slack REST API, which allows to
join Slack channels, post messages, create channels and groups and manage
those, upload and search files, manage presence."""
