(rule
 (targets timestamp.ml)
 (deps ../src/lib/timestamp.ml)
 (action
  (copy %{deps} %{targets})))

(executable
 (name test_slacko)
 (libraries slacko alcotest-lwt)
 (preprocess
  (pps ppx_deriving_yojson ppx_deriving.show ppx_deriving.make
    ppx_deriving.eq)))

(rule
 (alias runtest)
 (deps
  (:test
   (file test_slacko.exe))
  (glob_files *.json))
 (action
  (run %{test})))
